--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,29 @@
     <div class="content-wrapper center">
         <div class="content">
             <h1>Contact</h1>
+            <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
         </div>
           <section class="social">
             <h3>Connect with Me</h3>
             <div>
                 <a target="_blank" href="https://github.com/Priya1240">
-                    <img src="assets/images/git icon.png">
+                    <img src="assets/images/giticon.png">
                 </a>
                 <a target="_blank" href="https://www.linkedin.com/in/priyaiyar/">
                     <img src="assets/images/linkedin.png">
