--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="content-wrapper center">
             <div class="content">
                 <h1>About Me</h1>
-                <img src="Assets/images/port1.jpg" alt="beach">
+                <img src="Assets/images/port1.jpg" alt="beach" class="article-image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea praesentium repudiandae accusantium nostrum doloribus voluptas accusamus consectetur quod inventore provident magni id sit, dolor harum totam. Odio ducimus error architecto. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime nisi ad tempora quos cumque. Eligendi et quas tempore suscipit commodi quod quisquam, vel, minus molestias voluptate facilis ipsum placeat provident.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates a, odio molestiae dolores debitis cumque nobis sed nihil earum porro, ratione ea optio, quo rem cupiditate delectus sit, deserunt odit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, eligendi aspernatur repellendus ducimus voluptas recusandae qui quaerat, incidunt, quia hic beatae? Accusantium, saepe tempora, laboriosam in quidem non. Modi, recusandae.</p>
             </div>
