--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Priya Iyar</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
 </head>
 
 <body>
@@ -46,13 +46,13 @@
             <h3>Connect with Me</h3>
             <div>
                 <a target="_blank" href="https://github.com/Priya1240">
-                    <img src="assets/images/giticon.png">
+                    <img src="Assets/images/giticon.png">
                 </a>
                 <a target="_blank" href="https://www.linkedin.com/in/priyaiyar/">
-                    <img src="assets/images/linkedin.png">
+                    <img src="Assets/images/linkedin.png">
                 </a>
                 <a target="_blank" href="https://stackoverflow.com/users/7571549/priya-iyar?tab=profile">
-                    <img src="assets/images/stack.png">
+                    <img src="Assets/images/stack.png">
                 </a>
             </div>
         </section>
