--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
         <input type="submit">
       </form>
         </div>
-          <section class="social">
-            <h3>Connect with Me</h3>
+          <section class="social social-contact">
+            <h3>Connect with Me</h3> 
             <div>
                 <a target="_blank" href="https://github.com/Priya1240">
                     <img src="Assets/images/giticon.png">
