--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </header>
         <div class="content-wrapper center">
-            <div class="content">
+            <div class="content content-about">
                 <h1>About Me</h1>
                 <img src="Assets/images/port1.jpg" alt="beach" class="article-image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea praesentium repudiandae accusantium nostrum doloribus voluptas accusamus consectetur quod inventore provident magni id sit, dolor harum totam. Odio ducimus error architecto. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime nisi ad tempora quos cumque. Eligendi et quas tempore suscipit commodi quod quisquam, vel, minus molestias voluptate facilis ipsum placeat provident.</p>
@@ -44,8 +44,10 @@
                     </a>
                 </div>
             </section>
-        </div> <!-- content-wrapper -->
-    </div> <!-- sticky-footer -->
+        </div>
+        <!-- content-wrapper -->
+    </div>
+    <!-- sticky-footer -->
     <footer>
         <div class="footer-text">&copy Copyright 2017 Priya Iyar</div>
     </footer>
